--- a/Project 2/project_data/wrangle_act.ipynb
+++ b/Project 2/project_data/wrangle_act.ipynb
@@ -3194,7 +3194,7 @@
    "metadata": {},
    "source": [
     "#### Define:\n",
-    ">- Manually extract rating from text where rating numerator contains decimals and update ratings"
+    "* Manually extract rating from text where rating numerator contains decimals and update ratings"
    ]
   },
   {
@@ -3275,7 +3275,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Issue#9"
+    "### Nineth Step"
    ]
   },
   {
@@ -3283,7 +3283,7 @@
    "metadata": {},
    "source": [
     "#### Define:\n",
-    ">- Collapse multiple rows for dog type to one column 'stage'"
+    "* Collapse multiple rows for dog type to one column 'stage'"
    ]
   },
   {
@@ -3424,7 +3424,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Issue#10"
+    "## Tenth Step"
    ]
   },
   {
@@ -3432,7 +3432,7 @@
    "metadata": {},
    "source": [
     "#### Define:\n",
-    ">- Merge tweet_data and image_predictions to df_twitter_archive data"
+    "* Merge tweet_data and image_predictions to df_twitter_archive data"
    ]
   },
   {
@@ -3936,7 +3936,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Storing Data\n"
+    "## Saving the wrangled dataset\n"
    ]
   },
   {
