--- a/Project 2/project_data/wrangle_act.ipynb
+++ b/Project 2/project_data/wrangle_act.ipynb
@@ -3984,7 +3984,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    ">1. Type of dog(stage) that got highest retweet"
+    "### 1. Type of dog(stage) that got highest retweet"
    ]
   },
   {
@@ -4095,14 +4095,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    ">- From the analysis and visualization above <b>pupper</b> dogs generally seem to have more retweet counts followed by doggo, puppo, and floofer respectively"
+    "From the char above pupper dogs got more retweet counts, followed by doggo, puppo and floofer"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    ">2. Which type of dog got the highest favorite count"
+    "### 2. Which type of dog got the highest favorite count"
    ]
   },
   {
@@ -4164,7 +4164,7 @@
     "plt.figure(figsize=(10,6));\n",
     "x = by_stage_favorite_count.index\n",
     "y = by_stage_favorite_count.values\n",
-    "plt.bar(x, y, width = 0.4, color='darkgreen', alpha=.5);\n",
+    "plt.bar(x, y, width = 0.4, color='blue', alpha=.5);\n",
     "plt.xlabel('Dog stage', weight='bold', fontsize=13.0)\n",
     "plt.ylabel('Favorite count', weight='bold', fontsize=13.0)\n",
     "plt.title('Average favorite counts by stages of dogs', weight='bold', fontsize=18.0);"
