--- a/Project 2/project_data/wrangle_act.ipynb
+++ b/Project 2/project_data/wrangle_act.ipynb
@@ -4174,14 +4174,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    ">- From the analysis and visualization above <b>pupper</b> dogs seem to have more favorite counts followed by doggo, puppp, and floofer respectively "
+    "From the chart above, pupper dogs seem to have more favorite counts followed by doggo, puppp, and floofer respectively "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    ">3. What are the first 3 dogs with the highest rating numerator score"
+    "#### 3. What are the first 3 dogs with the highest rating numerator score"
    ]
   },
   {
@@ -4445,8 +4445,8 @@
     "plt.figure(figsize=(10,6));\n",
     "x = top_3.p1\n",
     "y = top_3.rating_numerator\n",
-    "plt.bar(x, y, width = 0.4, color='maroon', alpha=.5);\n",
-    "plt.xlabel('Predicted dog name', weight='bold', fontsize=13.0)\n",
+    "plt.bar(x, y, width = 0.4, color='orange', alpha=.5);\n",
+    "plt.xlabel('Predicted dog name', weight='bold', fontsize=12.0)\n",
     "plt.ylabel('Rating', weight='bold', fontsize=13.0)\n",
     "plt.title('Top 3 dogs with highest rating', weight='bold', fontsize=18.0);"
    ]
@@ -4455,14 +4455,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    ">- From the analysis and visualization above the three dogs with the highest numerator rating are <b>bow_tie, lakeside </b>and  <b>labrador_retriever</b> respectively (according to the prediction of the image)"
+    "\n",
+    "* From the chart above, bow_tie had the highest numerator rating, folowed by lakeside and larador_retriever"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    ">- Below Are the images hsving the higest ratings"
+    ">- Below Are the images with the higest ratings"
    ]
   },
   {
@@ -4560,13 +4561,6 @@
     "print(top_3.iloc[2].p1)\n",
     "display.Image(url)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
