--- a/Project 3/notebook.ipynb
+++ b/Project 3/notebook.ipynb
@@ -8,33 +8,8 @@
     }
    },
    "source": [
-    "# Part II - (Presentation Title)\n",
-    "## by (your name here)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    ">**Before you start**: You must have the README.md file ready that include a summary of main findings that reflects on the steps taken during the data exploration (Part I notebook). The README.md file should also describes the key insights that will be conveyed by the explanatory slide deck (Part II  outcome)\n",
-    "\n",
-    "\n",
-    "\n",
-    "## Investigation Overview\n",
-    "\n",
-    "\n",
-    "> Describe the overall goals of your presentation here. Add a summary of key insights at the start of the notebook, just as you added in the README.md. This will help your notebook to stay aligned to the key insights you want to include in your slide deck.\n",
-    "\n",
-    "> **Rubric Tip**: The key insights in the slideshow must match those documented in the README.md summary. \n",
-    "\n",
-    "\n",
-    "## Dataset Overview\n",
-    "\n",
-    "> Provide a brief overview of the dataset to be presented here."
+    "# Project 3 - Data Visualization of Ford Go-Bike System\n",
+    "## by (Ebenezer Acquah)"
    ]
   },
   {
