--- a/Project 3/notebook.ipynb
+++ b/Project 3/notebook.ipynb
@@ -41,9 +41,12 @@
    "source": [
     "Table of Content\n",
     "\n",
-    "- [Introduction]\n",
-    "- [Data Wrangling]\n",
-    "- [Univariate ]"
+    "- [Introduction](#intro)\n",
+    "- [Data Wrangling](#wrangling)\n",
+    "- [Univariate Exploration](#univariate)\n",
+    "- [Bivariate Exploration](#bivariate)\n",
+    "- [Multivariate Exploration](#multivariate)\n",
+    "- [Summary](#summary)"
    ]
   },
   {
