--- a/Project 3/notebook.ipynb
+++ b/Project 3/notebook.ipynb
@@ -13,13 +13,46 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Table of Content\n",
+    "\n",
+    "- [Introduction](#intro)\n",
+    "- [Data Wrangling](#wrangling)\n",
+    "- [Univariate Exploration](#univariate)\n",
+    "- [Bivariate Exploration](#bivariate)\n",
+    "- [Multivariate Exploration](#multivariate)\n",
+    "- [Summary](#summary)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### <a id='intro'> Introduction</a>\n",
+    "\n",
+    "> Give a short description of the dataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### <a id='wrangling'>Data Wrangling</a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Import Libraries"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "skip"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# import all packages and set plots to be embedded inline\n",
@@ -36,43 +69,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Table of Content\n",
-    "\n",
-    "- [Introduction](#intro)\n",
-    "- [Data Wrangling](#wrangling)\n",
-    "- [Univariate Exploration](#univariate)\n",
-    "- [Bivariate Exploration](#bivariate)\n",
-    "- [Multivariate Exploration](#multivariate)\n",
-    "- [Summary](#summary)"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -80,20 +78,236 @@
    },
    "outputs": [],
    "source": [
-    "# load in the dataset into a pandas dataframe\n"
+    "# load in the dataset into a pandas dataframe\n",
+    "df = pd.read_csv(\"/home/eben-success/Desktop/Local/Udacity/Udacity/Udacity_Data_Analysis_Projects/Project 3/201902-fordgobike-tripdata.csv\")\n"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "notes"
-    }
-   },
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "> Note that the above cells have been set as \"Skip\"-type slides. That means\n",
-    "that when the notebook is rendered as http slides, those cells won't show up."
+    "df_copy = df.copy()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>duration_sec</th>\n",
+       "      <th>start_time</th>\n",
+       "      <th>end_time</th>\n",
+       "      <th>start_station_id</th>\n",
+       "      <th>start_station_name</th>\n",
+       "      <th>start_station_latitude</th>\n",
+       "      <th>start_station_longitude</th>\n",
+       "      <th>end_station_id</th>\n",
+       "      <th>end_station_name</th>\n",
+       "      <th>end_station_latitude</th>\n",
+       "      <th>end_station_longitude</th>\n",
+       "      <th>bike_id</th>\n",
+       "      <th>user_type</th>\n",
+       "      <th>member_birth_year</th>\n",
+       "      <th>member_gender</th>\n",
+       "      <th>bike_share_for_all_trip</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>52185</td>\n",
+       "      <td>2019-02-28 17:32:10.1450</td>\n",
+       "      <td>2019-03-01 08:01:55.9750</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>Montgomery St BART Station (Market St at 2nd St)</td>\n",
+       "      <td>37.789625</td>\n",
+       "      <td>-122.400811</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>Commercial St at Montgomery St</td>\n",
+       "      <td>37.794231</td>\n",
+       "      <td>-122.402923</td>\n",
+       "      <td>4902</td>\n",
+       "      <td>Customer</td>\n",
+       "      <td>1984.0</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>42521</td>\n",
+       "      <td>2019-02-28 18:53:21.7890</td>\n",
+       "      <td>2019-03-01 06:42:03.0560</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>The Embarcadero at Steuart St</td>\n",
+       "      <td>37.791464</td>\n",
+       "      <td>-122.391034</td>\n",
+       "      <td>81.0</td>\n",
+       "      <td>Berry St at 4th St</td>\n",
+       "      <td>37.775880</td>\n",
+       "      <td>-122.393170</td>\n",
+       "      <td>2535</td>\n",
+       "      <td>Customer</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>61854</td>\n",
+       "      <td>2019-02-28 12:13:13.2180</td>\n",
+       "      <td>2019-03-01 05:24:08.1460</td>\n",
+       "      <td>86.0</td>\n",
+       "      <td>Market St at Dolores St</td>\n",
+       "      <td>37.769305</td>\n",
+       "      <td>-122.426826</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>Powell St BART Station (Market St at 4th St)</td>\n",
+       "      <td>37.786375</td>\n",
+       "      <td>-122.404904</td>\n",
+       "      <td>5905</td>\n",
+       "      <td>Customer</td>\n",
+       "      <td>1972.0</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>36490</td>\n",
+       "      <td>2019-02-28 17:54:26.0100</td>\n",
+       "      <td>2019-03-01 04:02:36.8420</td>\n",
+       "      <td>375.0</td>\n",
+       "      <td>Grove St at Masonic Ave</td>\n",
+       "      <td>37.774836</td>\n",
+       "      <td>-122.446546</td>\n",
+       "      <td>70.0</td>\n",
+       "      <td>Central Ave at Fell St</td>\n",
+       "      <td>37.773311</td>\n",
+       "      <td>-122.444293</td>\n",
+       "      <td>6638</td>\n",
+       "      <td>Subscriber</td>\n",
+       "      <td>1989.0</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1585</td>\n",
+       "      <td>2019-02-28 23:54:18.5490</td>\n",
+       "      <td>2019-03-01 00:20:44.0740</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>Frank H Ogawa Plaza</td>\n",
+       "      <td>37.804562</td>\n",
+       "      <td>-122.271738</td>\n",
+       "      <td>222.0</td>\n",
+       "      <td>10th Ave at E 15th St</td>\n",
+       "      <td>37.792714</td>\n",
+       "      <td>-122.248780</td>\n",
+       "      <td>4898</td>\n",
+       "      <td>Subscriber</td>\n",
+       "      <td>1974.0</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   duration_sec                start_time                  end_time  \\\n",
+       "0         52185  2019-02-28 17:32:10.1450  2019-03-01 08:01:55.9750   \n",
+       "1         42521  2019-02-28 18:53:21.7890  2019-03-01 06:42:03.0560   \n",
+       "2         61854  2019-02-28 12:13:13.2180  2019-03-01 05:24:08.1460   \n",
+       "3         36490  2019-02-28 17:54:26.0100  2019-03-01 04:02:36.8420   \n",
+       "4          1585  2019-02-28 23:54:18.5490  2019-03-01 00:20:44.0740   \n",
+       "\n",
+       "   start_station_id                                start_station_name  \\\n",
+       "0              21.0  Montgomery St BART Station (Market St at 2nd St)   \n",
+       "1              23.0                     The Embarcadero at Steuart St   \n",
+       "2              86.0                           Market St at Dolores St   \n",
+       "3             375.0                           Grove St at Masonic Ave   \n",
+       "4               7.0                               Frank H Ogawa Plaza   \n",
+       "\n",
+       "   start_station_latitude  start_station_longitude  end_station_id  \\\n",
+       "0               37.789625              -122.400811            13.0   \n",
+       "1               37.791464              -122.391034            81.0   \n",
+       "2               37.769305              -122.426826             3.0   \n",
+       "3               37.774836              -122.446546            70.0   \n",
+       "4               37.804562              -122.271738           222.0   \n",
+       "\n",
+       "                               end_station_name  end_station_latitude  \\\n",
+       "0                Commercial St at Montgomery St             37.794231   \n",
+       "1                            Berry St at 4th St             37.775880   \n",
+       "2  Powell St BART Station (Market St at 4th St)             37.786375   \n",
+       "3                        Central Ave at Fell St             37.773311   \n",
+       "4                         10th Ave at E 15th St             37.792714   \n",
+       "\n",
+       "   end_station_longitude  bike_id   user_type  member_birth_year  \\\n",
+       "0            -122.402923     4902    Customer             1984.0   \n",
+       "1            -122.393170     2535    Customer                NaN   \n",
+       "2            -122.404904     5905    Customer             1972.0   \n",
+       "3            -122.444293     6638  Subscriber             1989.0   \n",
+       "4            -122.248780     4898  Subscriber             1974.0   \n",
+       "\n",
+       "  member_gender bike_share_for_all_trip  \n",
+       "0          Male                      No  \n",
+       "1           NaN                      No  \n",
+       "2          Male                      No  \n",
+       "3         Other                      No  \n",
+       "4          Male                     Yes  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -117,17 +331,6 @@
     "\n",
     "> **Rubric Tip**: All plots in the slideshow are polished, meaning all plots have a title, labeled x/y axes (with units), x/y ticks, and legends. "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
