--- a/Project 3/notebook.ipynb
+++ b/Project 3/notebook.ipynb
@@ -19,6 +19,7 @@
     "Table of Content\n",
     "\n",
     "- [Introduction](#intro)\n",
+    "-[Prelimary Investigation](#investigation)\n",
     "- [Data Wrangling](#wrangling)\n",
     "- [Univariate Exploration](#univariate)\n",
     "- [Bivariate Exploration](#bivariate)\n",
@@ -32,14 +33,14 @@
    "source": [
     "### <a id='intro'> Introduction</a>\n",
     "\n",
-    "> Give a short description of the dataset"
+    "> This dataset provides information about individual rides made in a bike-sharing system in the San Francisco Bay Area. The dataset has 183412 rows and 16 columns"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <a id='wrangling'>Data Wrangling</a>"
+    "### <a id='investigation'>Prelimary Investigation</a>"
    ]
   },
   {
@@ -290,24 +291,182 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(183412, 16)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# check the number of rows and columns in the dataset\n",
+    "df.shape"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['No', 'Yes'], dtype=object)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# check tthe unique values in the target datasets (bike_share_for_all_trip)\n",
+    "df.bike_share_for_all_trip.unique()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 183412 entries, 0 to 183411\n",
+      "Data columns (total 16 columns):\n",
+      " #   Column                   Non-Null Count   Dtype  \n",
+      "---  ------                   --------------   -----  \n",
+      " 0   duration_sec             183412 non-null  int64  \n",
+      " 1   start_time               183412 non-null  object \n",
+      " 2   end_time                 183412 non-null  object \n",
+      " 3   start_station_id         183215 non-null  float64\n",
+      " 4   start_station_name       183215 non-null  object \n",
+      " 5   start_station_latitude   183412 non-null  float64\n",
+      " 6   start_station_longitude  183412 non-null  float64\n",
+      " 7   end_station_id           183215 non-null  float64\n",
+      " 8   end_station_name         183215 non-null  object \n",
+      " 9   end_station_latitude     183412 non-null  float64\n",
+      " 10  end_station_longitude    183412 non-null  float64\n",
+      " 11  bike_id                  183412 non-null  int64  \n",
+      " 12  user_type                183412 non-null  object \n",
+      " 13  member_birth_year        175147 non-null  float64\n",
+      " 14  member_gender            175147 non-null  object \n",
+      " 15  bike_share_for_all_trip  183412 non-null  object \n",
+      "dtypes: float64(7), int64(2), object(7)\n",
+      "memory usage: 22.4+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "duration_sec                  0\n",
+       "start_time                    0\n",
+       "end_time                      0\n",
+       "start_station_id            197\n",
+       "start_station_name          197\n",
+       "start_station_latitude        0\n",
+       "start_station_longitude       0\n",
+       "end_station_id              197\n",
+       "end_station_name            197\n",
+       "end_station_latitude          0\n",
+       "end_station_longitude         0\n",
+       "bike_id                       0\n",
+       "user_type                     0\n",
+       "member_birth_year          8265\n",
+       "member_gender              8265\n",
+       "bike_share_for_all_trip       0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "From the summary above, there are 197 missing values in start_station_id, start_station_name, end_station_id, end_station_name and 8265 missing values in member_birth_year and member_gender."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.duplicated().sum ()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Investigations made so far\n",
+    "\n",
+    ">- Most of the entries have incorrect datatypes\n",
+    ">- Some columns have missing data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### <a id='wrangling'>Data Wrangling</a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Correcting Datatypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# convert start_time and end_time to datetime format\n",
+    "df.start_time = pd.to_datetime(df. start_time)\n",
+    "df.end_time = pd.to_datetime(df.end_time)"
+   ]
   },
   {
    "cell_type": "markdown",
