Find missing values

--- a/Project 3/notebook.ipynb
+++ b/Project 3/notebook.ipynb
@@ -459,14 +459,119 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "# convert start_time and end_time to datetime format\n",
     "df.start_time = pd.to_datetime(df. start_time)\n",
-    "df.end_time = pd.to_datetime(df.end_time)"
+    "df.end_time = pd.to_datetime(df.end_time)\n",
+    "\n",
+    "# convert the start_station_id and end_stattion_id to strings\n",
+    "df.start_station_id = df.start_station_id.astype('str')\n",
+    "\n",
+    "df.end_station_id = df.end_station_id.astype('str')\n",
+    "\n",
+    "# convert the bike_id to string\n",
+    "df.bike_id = df.bike_id.astype('str')\n",
+    "\n",
+    "# convert the user type and member_gender to categories\n",
+    "df.user_type = df.user_type.astype('category')\n",
+    "\n",
+    "df.member_gender = df.member_gender.astype('category')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 183412 entries, 0 to 183411\n",
+      "Data columns (total 16 columns):\n",
+      " #   Column                   Non-Null Count   Dtype         \n",
+      "---  ------                   --------------   -----         \n",
+      " 0   duration_sec             183412 non-null  int64         \n",
+      " 1   start_time               183412 non-null  datetime64[ns]\n",
+      " 2   end_time                 183412 non-null  datetime64[ns]\n",
+      " 3   start_station_id         183412 non-null  object        \n",
+      " 4   start_station_name       183215 non-null  object        \n",
+      " 5   start_station_latitude   183412 non-null  float64       \n",
+      " 6   start_station_longitude  183412 non-null  float64       \n",
+      " 7   end_station_id           183412 non-null  object        \n",
+      " 8   end_station_name         183215 non-null  object        \n",
+      " 9   end_station_latitude     183412 non-null  float64       \n",
+      " 10  end_station_longitude    183412 non-null  float64       \n",
+      " 11  bike_id                  183412 non-null  object        \n",
+      " 12  user_type                183412 non-null  category      \n",
+      " 13  member_birth_year        175147 non-null  float64       \n",
+      " 14  member_gender            175147 non-null  category      \n",
+      " 15  bike_share_for_all_trip  183412 non-null  object        \n",
+      "dtypes: category(2), datetime64[ns](2), float64(5), int64(1), object(6)\n",
+      "memory usage: 19.9+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "#checking to see if changes have been implemented\n",
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Filling in Missing Values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "duration_sec               0.000000\n",
+       "start_time                 0.000000\n",
+       "end_time                   0.000000\n",
+       "start_station_id           0.000000\n",
+       "start_station_name         0.107408\n",
+       "start_station_latitude     0.000000\n",
+       "start_station_longitude    0.000000\n",
+       "end_station_id             0.000000\n",
+       "end_station_name           0.107408\n",
+       "end_station_latitude       0.000000\n",
+       "end_station_longitude      0.000000\n",
+       "bike_id                    0.000000\n",
+       "user_type                  0.000000\n",
+       "member_birth_year          4.506248\n",
+       "member_gender              4.506248\n",
+       "bike_share_for_all_trip    0.000000\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Find the percentage of missing values\n",
+    "\n",
+    "(df.isna().sum() / df.shape[0]) * 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
