--- a/Project 3/notebook.ipynb
+++ b/Project 3/notebook.ipynb
@@ -80,6 +80,8 @@
    "outputs": [],
    "source": [
     "# load in the dataset into a pandas dataframe\n",
+    "\n",
+    "# load\n",
     "df = pd.read_csv(\"/home/eben-success/Desktop/Local/Udacity/Udacity/Udacity_Data_Analysis_Projects/Project 3/201902-fordgobike-tripdata.csv\")\n"
    ]
   },
@@ -459,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -567,11 +569,73 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Fill the missing values with the mode"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "for col in ['start_station_id', 'end_station_id', 'member_birth_year', 'member_gender' , 'end_station_name', 'start_station_name']:\n",
+    "    df[col] = df[col].fillna(df[col].mode()[0])\n",
+    "    \n",
+    "df['member_gender'] = df['member_gender'].fillna(\"Male\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Recheck the percentage of missing values "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "duration_sec               0.0\n",
+       "start_time                 0.0\n",
+       "end_time                   0.0\n",
+       "start_station_id           0.0\n",
+       "start_station_name         0.0\n",
+       "start_station_latitude     0.0\n",
+       "start_station_longitude    0.0\n",
+       "end_station_id             0.0\n",
+       "end_station_name           0.0\n",
+       "end_station_latitude       0.0\n",
+       "end_station_longitude      0.0\n",
+       "bike_id                    0.0\n",
+       "user_type                  0.0\n",
+       "member_birth_year          0.0\n",
+       "member_gender              0.0\n",
+       "bike_share_for_all_trip    0.0\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(df.isna().sum() / df.shape[0]) * 100"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Feature Engineering"
+   ]
   },
   {
    "cell_type": "markdown",
