--- a/Project 3/notebook.ipynb
+++ b/Project 3/notebook.ipynb
@@ -461,9 +461,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'pd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/home/eben-success/Desktop/Local/Udacity/Udacity/Udacity_Data_Analysis_Projects/Project 3/notebook.ipynb Cell 19\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/eben-success/Desktop/Local/Udacity/Udacity/Udacity_Data_Analysis_Projects/Project%203/notebook.ipynb#ch0000018?line=0'>1</a>\u001b[0m \u001b[39m# convert start_time and end_time to datetime format\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/eben-success/Desktop/Local/Udacity/Udacity/Udacity_Data_Analysis_Projects/Project%203/notebook.ipynb#ch0000018?line=1'>2</a>\u001b[0m df\u001b[39m.\u001b[39mstart_time \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mto_datetime(df\u001b[39m.\u001b[39m start_time)\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/eben-success/Desktop/Local/Udacity/Udacity/Udacity_Data_Analysis_Projects/Project%203/notebook.ipynb#ch0000018?line=2'>3</a>\u001b[0m df\u001b[39m.\u001b[39mend_time \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mto_datetime(df\u001b[39m.\u001b[39mend_time)\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/eben-success/Desktop/Local/Udacity/Udacity/Udacity_Data_Analysis_Projects/Project%203/notebook.ipynb#ch0000018?line=4'>5</a>\u001b[0m \u001b[39m# convert the start_station_id and end_stattion_id to strings\u001b[39;00m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'pd' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# convert start_time and end_time to datetime format\n",
     "df.start_time = pd.to_datetime(df. start_time)\n",
